# garagemsara

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
garagem/: admin.py  models.py
garagem/migrations/: 0001_initial.py  0002_acessorio_cor_modelo_veiculo.py  0002_veiculo_capa.py  0003_remove_veiculo_capa_veiculo_capa.py
garagem/models/: veiculo.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
